# alwayson_py

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
examples/: README.md  metadata.json  property_value_history.json  property_values.json  sample_event.json  sample_hex.txt  sample_persist.txt  sample_property.json  sample_service.json  simple_string.txt  test_json_samples.py  test_persist.py  test_persist_avro_thingworx.py  test_sample.py  test_simple_string.py
python/alwayson/: __init__.py
src/: lib.rs
src/types/: base_type.rs  entities.rs  error.rs  infotable.rs  message.rs  mod.rs  primitive.rs
